data/raw_logs/syntactic/syn_for_semi.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_for_semi.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_for_semi.c:1:27: error: expected ',' or ';' before 'i'
    1 | int main() { for (int i=0 i<10; i++) return 0; }
      |                           ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_for_semi.c:1:36: error: expected ';' before ')' token
    1 | int main() { for (int i=0 i<10; i++) return 0; }
      |                                    ^
      |                                    ;
